# athena-federation-python-sdk

./: .gitignore  Dockerfile  Makefile  README.md  requirements.txt  setup.cfg  setup.py
example/: handler.py  sample_data_source.py
src/: handler.py
src/athena/federation/: __init__.py  athena_data_source.py  batch_writer.py  data_catalog.py  lambda_handler.py  models.py  sdk.py  utils.py
