[metadata]
name = unoffical_athena_federation_sdk
version = attr: athena.federation.__version__
description = Unofficial Python SDK for Athena Federation
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = ~=3.8
install_requires =
    pyarrow==0.16.0

[options.packages.find]
where = src