[metadata]
name = unoffical-athena-federation-sdk
version = attr: athena.federation.__version__
description = Unofficial Python SDK for Athena Federation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dacort/athena-federation-python-sdk
project_urls =
    Bug Tracker = https://github.com/dacort/athena-federation-python-sdk/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = ~=3.8
install_requires =
    pyarrow==0.16.0

[options.packages.find]
where = src